launchpad-buildd (127) UNRELEASED; urgency=low

  * Refactor lpbuildd.binarypackage tests to be readable.

 -- William Grant <wgrant@ubuntu.com>  Sat, 18 Apr 2015 06:41:52 +1000

launchpad-buildd (126) trusty; urgency=medium

  [ Colin Watson ]
  * Build with dpkg-deb -Zgzip, so that the resulting .deb can still be
    installed on lucid.
  * Drop support for running binarypackage builds without a "suite"
    argument; Launchpad has passed this for all binarypackage builds since
    2007.
  * Expect a "distribution" argument in binarypackage and pass it to
    sbuild's --archive option (LP: #1348077).  Remove the hardcoded
    --archive=ubuntu from the configuration file.
  * upgrade-config: Use python-apt for version comparison (LP: #574713).
  * debian/launchpad-buildd.cron.daily: Remove old ddebs and translations
    directories recursively (LP: #1417893).

  [ William Grant ]
  * Remove the 1GB RLIMIT_AS for recipe builds. All virtual builders now have
    4GiB of RAM, so even maxing out a 32-bit address space can't cause much
    trashing. This also fixes build dependency installation for some packages,
    as the ulimit was erroneously applied to more than just the tree build
    phase (LP: #693524).
  * Drop the long-obsolete "debian" alias for the "binarypackage" build
    manager (LP: #538844).

  [ Adam Conrad ]
  * Avoid removing the buildlog in the cron.daily cleanup job, so that we
    don't end up removing it and crashing lp-buildd on a long-hung build.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 06 Feb 2015 21:03:36 +0000

launchpad-buildd (125) trusty; urgency=medium

  [ Dimitri John Ledkov ]
  * Enable verbose build logs (LP: #516208).

  [ Colin Watson ]
  * Calculate the FQDN dynamically in sbuildrc rather than substituting it
    in from the postinst.  This is friendlier to scalingstack, where a
    single image is used for multiple guests.
  * Set V=1 rather than DH_VERBOSE=1, in line with Debian buildds and to