@@ -8,29 +8,10 @@ filecache = /home/buildd/filecache-@NAME@
 bindhost = @BINDHOST@
 bindport = @BINDPORT@
 ntphost = ntp.buildd
-
-[allmanagers]
-preppath = /usr/share/launchpad-buildd/slavebin/slave-prep
-unpackpath = /usr/share/launchpad-buildd/slavebin/unpack-chroot
-cleanpath = /usr/share/launchpad-buildd/slavebin/remove-build
-mountpath = /usr/share/launchpad-buildd/slavebin/mount-chroot
-umountpath = /usr/share/launchpad-buildd/slavebin/umount-chroot
-processscanpath = /usr/share/launchpad-buildd/slavebin/scan-for-processes
-
-[debianmanager]
-updatepath = /usr/share/launchpad-buildd/slavebin/update-debian-chroot
-sourcespath = /usr/share/launchpad-buildd/slavebin/override-sources-list
+sharepath = /usr/share/launchpad-buildd
 
 [binarypackagemanager]
-sbuildpath = /usr/share/launchpad-buildd/slavebin/sbuild-package
 sbuildargs = --nolog --batch
 
-[sourcepackagerecipemanager]
-buildrecipepath = /usr/share/launchpad-buildd/slavebin/buildrecipe
-
 [translationtemplatesmanager]
-generatepath = /usr/share/launchpad-buildd/slavebin/generate-translation-templates
 resultarchive = translation-templates.tar.gz
-
-[livefilesystemmanager]
-buildlivefspath = /usr/share/launchpad-buildd/slavebin/buildlivefs
