@@ -1,6 +1,7 @@
 launchpad-buildd (127) UNRELEASED; urgency=low
 
   * Refactor lpbuildd.binarypackage tests to be readable.
+  * Drop duplicated paths from the config file.
 
  -- William Grant <wgrant@ubuntu.com>  Sat, 18 Apr 2015 06:41:52 +1000
 
